Enable AggressiveOpts JVM flag