@@ -20,4 +20,11 @@ ENV STATSD_PORT 8125
 EXPOSE 80
 VOLUME [ "/var/arion" ]
 
-CMD exec java -server -XX:+UseG1GC -Xmx${HEAP_SIZE} -Xms${HEAP_SIZE} -jar arion.jar
+CMD exec java \
+    -server \
+    -XX:+UseG1GC \
+    -Xmx${HEAP_SIZE} \
+    -Xms${HEAP_SIZE} \
+    -XX:MaxGCPauseMillis=10 \
+    -XX:+AggressiveOpts \
+    -jar arion.jar
